--- a/style.css
+++ b/style.css
@@ -1,4 +1,30 @@
-header{
-background-color:  #0026ff;
-color: white;
+.cabecalho {
+    background-color: #383D58;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    padding: 18px 0;
+}
+
+.cabecalho-imagem {
+    width: 18%;
+    padding: 0 20px;
+}
+
+.cabecalho-lista-item {
+    display: inline-block;
+    margin: 0 16px;
+    padding: 10px 0;
+    font-size: 22px;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+
+
+.escola{
+    background-image: linear-gradient(#EB0606, #CA4EE9);
 }
